# tauri-connector

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: package.json
cli/src/: client.ts  index.ts  snapshot.ts
crates/cli/: Cargo.toml
crates/cli/skill/: SETUP.md  SKILL.md
crates/cli/skill/references/: cli-commands.md  code-review-playbook.md  debug-playbook.md  mcp-tools.md  snapshot-budget.md
crates/cli/src/: commands.rs  doctor.rs  hook.rs  main.rs  skills.rs  snapshot.rs  update.rs
crates/client/: Cargo.toml
crates/client/src/: discovery.rs  lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  protocol.rs  tools.rs
docs/superpowers/plans/: 2026-03-19-debug-suite.md  2026-03-19-unified-snapshot-engine.md  2026-03-26-snapshot-budget-engine.md
docs/superpowers/specs/: 2026-03-19-debug-suite-design.md  2026-03-19-unified-snapshot-engine-design.md  2026-03-26-snapshot-budget-engine-design.md
plugin/: Cargo.toml  build.rs
plugin/js/: bridge.js
plugin/permissions/: default.toml
plugin/permissions/autogenerated/: reference.md
plugin/permissions/schemas/: schema.json
plugin/src/: bridge.rs  handlers.rs  lib.rs  mcp.rs  mcp_tool_schema.rs  mcp_tools.rs  protocol.rs  server.rs  state.rs
scripts/: publish-skill.sh
server/: package.json
server/src/: client.ts  index.ts
skill/: RELEASE.md  SETUP.md  SKILL.md
skill/references/: cli-commands.md  debug-playbook.md  mcp-tools.md
skill/scripts/: click.ts  connector.ts  drag.ts  eval.ts  events.ts  fill.ts  find.ts  hover.ts  logs.ts  screenshot.ts  snapshot.ts  state.ts  wait.ts  windows.ts
