[package]
name = "tauri-plugin-connector"
version = "0.1.0"
edition = "2024"
description = "MCP-compatible Tauri v2 plugin with reliable JS execution via WebSocket bridge - fixes __TAURI__ not available bug"
license = "MIT"
repository = "https://github.com/dickwu/tauri-connector"
homepage = "https://github.com/dickwu/tauri-connector"
keywords = ["tauri", "mcp", "plugin", "webview", "automation"]
categories = ["development-tools", "gui"]
readme = "../README.md"
links = "tauri-plugin-connector"

[lib]
name = "tauri_plugin_connector"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
