[package]
name = "tauri-plugin-connector"
version = "0.10.0"
edition = "2024"
description = "MCP-compatible Tauri v2 plugin with xcap cross-platform screenshot, snapdom fallback, dual-path JS execution, and embedded MCP server"
license = "MIT"
repository = "https://github.com/dickwu/tauri-connector"
homepage = "https://github.com/dickwu/tauri-connector"
keywords = ["tauri", "mcp", "plugin", "webview", "automation"]
categories = ["development-tools", "gui"]
readme = "../README.md"
links = "tauri-plugin-connector"

[features]
default = ["xcap"]
xcap = ["dep:xcap", "dep:image"]

[package.metadata.docs.rs]
no-default-features = true

[lib]
name = "tauri_plugin_connector"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"], optional = true }
xcap = { version = "0.8", optional = true }
thiserror = "2"
axum = "0.8"
tokio-stream = "0.1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
