[package]
name = "connector-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for interacting with Tauri apps via tauri-plugin-connector"

[[bin]]
name = "tauri-connector"
path = "src/main.rs"

[dependencies]
connector-client = { path = "../client" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
