[package]
name = "connector-client"
version = "0.1.0"
edition = "2021"
description = "Shared WebSocket client for tauri-plugin-connector"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "sync", "time"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
