[package]
name = "connector-mcp-server"
version = "0.4.3"
edition = "2021"
description = "MCP server for tauri-plugin-connector (Rust)"

[[bin]]
name = "tauri-connector-mcp"
path = "src/main.rs"

[dependencies]
connector-client = { path = "../client" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
